// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`worktree create creates worktree with explicit name 1`] = `
"Creating worktree 'feature-branch' for project 'my-project'
  Path: /Users/andresmartinezperez/sandcastle/worktrees/my-project/feature-branch
  Based on: HEAD
Worktree created successfully.
  Branch: feature-branch
  Commit: abc1234"
`;

exports[`worktree create creates worktree from specific ref 1`] = `
"Creating worktree 'hotfix' for project 'my-project'
  Path: /Users/andresmartinezperez/sandcastle/worktrees/my-project/hotfix
  Based on: v1.0.0
Worktree created successfully.
  Branch: hotfix
  Commit: abc1234"
`;

exports[`worktree list lists worktrees for a project 1`] = `
"Worktrees for 'my-project':

feature-a
  Path: /Users/andresmartinezperez/sandcastle/worktrees/my-project/feature-a
  Commit: abc1234
feature-b
  Path: /Users/andresmartinezperez/sandcastle/worktrees/my-project/feature-b
  Commit: def5678"
`;

exports[`worktree list shows empty message when no worktrees 1`] = `
"Worktrees for 'my-project':

No worktrees found."
`;

exports[`worktree delete deletes a worktree 1`] = `
"Deleting worktree 'old-branch' from project 'my-project'
Worktree deleted successfully."
`;

exports[`worktree delete force deletes a worktree 1`] = `
"Deleting worktree 'dirty-branch' from project 'my-project'
Worktree deleted successfully."
`;

exports[`worktree prune prunes stale worktrees 1`] = `
"Pruning stale worktree references for 'my-project'...
Pruned successfully."
`;
